# safe_mbrl

./: .gitattributes  .gitignore  README.md  pyproject.toml
safe_mbrl/: m445_hammer_spec.py
safe_mbrl/envs/: base.py  heap_m445.py  heap_m545.py  m445_hammer.py
safe_mbrl/envs/heap_env/: custom_meshcat_visualizer.py  heap_example_env.py
safe_mbrl/envs/heap_env/plant/: actuator_net.py
safe_mbrl/envs/heap_env/rsc/m445/: m445_hammer_w_cabin_simplified.urdf  m445_shovel_fixed_w_cabin.urdf
safe_mbrl/envs/heap_env/rsc/m545/: m545_boom_dipper_tele_pitch.urdf
safe_mbrl/envs/heap_env/rsc/m545/meshes/: BASE.dae  BOOM.dae  DIPPER.dae  ENDEFFECTOR.dae  LF_BEARING.dae  LF_KNUCKLE.dae  LF_SWIVEL.dae  LH_BEAM.dae  LH_KNUCKLE.dae  LH_ROTATOR.dae  LH_WHEEL.dae  RF_BEAM.dae  RF_BEARING.dae  RF_KNUCKLE.dae  RF_PARALLEL.dae  RF_SWIVEL.dae  RF_WHEEL.dae  (+9 more)
safe_mbrl/envs/m445_plant/: m445.py
safe_mbrl/envs/m445_plant/model/: config.json
safe_mbrl/envs/m445_plant/model/state/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
safe_mbrl/ik/: __init__.py  newton_ik.py
safe_mbrl/models/: online_trainer.py  robot_ensemble.py
safe_mbrl/mpc/: base.py  cem.py  icem.py  mppi.py
safe_mbrl/traj/: __init__.py  min_jerk.py
safe_mbrl/utils/: checkpointer.py  ensembles.py  mlp.py  tb_logger.py  type_aliases.py
scripts/: collect_heap_dataset_mppi.py  eval_ik_batch.py  heap_env.py  run_strike_sim.py  test_env_consistency.py  train_heap_ensemble.py  train_heap_ensemble_ICEM.py  train_heap_ensemble_icem.py  train_heap_ensemble_mppi.py  train_heap_ensemble_mppi_saving.py
(+2 files in other folders)
