[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "safe_mbrl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "brax==0.14.2",
    "flax==0.12.7",
    "gymnasium==1.3.0",
    "imageio==2.37.3",
    "jax==0.10.0",
    "matplotlib==3.10.8",
    "meshcat==0.3.2",
    "mujoco==3.8.0",
    "mujoco-mjx==3.8.0",
    "numpy==2.4.4",
    "orbax-checkpoint==0.12.0",
    "pin==4.0.0",
    "pytorch-kinematics==0.10.0",
    "ruamel.yaml==0.19.1",
    "tensorboard==2.20.0",
    "torch==2.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["safe_mbrl*"]
